--- a/app/src/main/res/drawable/category_checked.xml
+++ b/app/src/main/res/drawable/category_checked.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#45b6fe"/>
+    <solid android:color="#d1b6bb"/>
     <corners android:topRightRadius="12dp"
         android:topLeftRadius="12dp"
         android:bottomRightRadius="12dp"
