--- a/app/src/main/res/drawable/category_unchecked.xml
+++ b/app/src/main/res/drawable/category_unchecked.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="@color/white"/>
-    <stroke android:color="#39FF14"
-        android:width="4dp"/>
+    <stroke android:color="#8d4856"
+        android:width="2.5dp"/>
     <corners android:bottomLeftRadius="12dp"
         android:bottomRightRadius="12dp"
         android:topLeftRadius="12dp"
