--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,4 +7,14 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:title="News Reader">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:paddingEnd="16dp"
+        app:queryHint="Search related news..." />
+
+
+
 </androidx.appcompat.widget.Toolbar>
